<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/padding_top_bottom"
    android:paddingTop="30dp"
    android:paddingLeft="@dimen/padđing_left_right"
    android:paddingRight="@dimen/padđing_left_right"
    tools:context="com.caosiqui.quicaoit.appbandienthoaididong.activity.DangKyActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:gravity="center_horizontal"
        android:text="đăng ký"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_username"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtTitle"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_password"
        android:inputType="textWebPassword"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtUserName"/>
    <EditText
        android:id="@+id/txtFullname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_fullname"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtPassword"/>
    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_phone"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:inputType="textPhonetic"
        android:layout_below="@+id/txtFullname"/>
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_email"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/txtPhone"/>
    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/promt_address"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtEmail"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_button"
        android:paddingRight="@dimen/margin_button"
        android:paddingTop="@dimen/line_height"
        android:paddingBottom="@dimen/line_height"
        android:textSize="@dimen/text_size"
        android:text="@string/title_register"
        android:layout_marginTop="@dimen/margin_button"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/txtAddress"
        android:layout_centerHorizontal="true"/>

</RelativeLayout >
