<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/padding_top_bottom"
    android:paddingTop="@dimen/padding_top_bottom"
    android:paddingLeft="@dimen/padđing_left_right"
    android:paddingRight="@dimen/padđing_left_right"
    tools:context="com.caosiqui.quicaoit.appbandienthoaididong.activity.DangNhapActivity">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:text="đăng nhập"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_username"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtTitle"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_promt"
        android:hint="@string/promt_password"
        android:inputType="textWebPassword"
        android:layout_marginTop="@dimen/line_height"
        android:padding="@dimen/padding_promt"
        android:textSize="@dimen/text_size"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtUserName"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_button"
        android:paddingRight="@dimen/margin_button"
        android:paddingTop="@dimen/line_height"
        android:paddingBottom="@dimen/line_height"
        android:textSize="@dimen/text_size"
        android:text="@string/title_login"
        android:layout_marginTop="@dimen/margin_button"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/txtPassword"
        android:layout_marginLeft="30dp"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_button"
        android:paddingRight="@dimen/margin_button"
        android:paddingTop="@dimen/line_height"
        android:paddingBottom="@dimen/line_height"
        android:textSize="@dimen/text_size"
        android:text="@string/title_register"
        android:layout_marginTop="@dimen/margin_button"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/txtPassword"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_toRightOf="@+id/btnLogin"
        />
    <TextView
        android:id="@+id/txtWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hoặc đăng nhập với"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnLogin"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtWith"/>

</RelativeLayout >
